# aws-billing-reminder

./: .gitignore  PLAN.md  README.md  pyproject.toml  requirements-dev.txt
app/: main.py
app/services/: notification.py
infrastructure/: template.yaml
scripts/: deploy.py
src/aws_billing_reminder/lambdas/billing_alert/: cost_explorer.py  main.py  notification.py
tests/: conftest.py
tests/integration/: test_billing_alert.py
tests/unit/: test_cost_explorer.py  test_main.py  test_notification.py
