[project]
name = "aws-billing-reminder"
version = "0.1.0"
description = ""
authors = [
    {name = "yusupscopes",email = "yusupmaulana950@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "aws_billing_reminder", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
