[project]
name = "aws-billing-reminder"
version = "0.1.0"
description = ""
authors = [
    {name = "yusupscopes",email = "yusupmaulana950@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3 (==1.26.137)"
]

[tool.poetry]
packages = [{include = "aws_billing_reminder", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "7.3.1"
pytest-cov = "4.1.0"
moto = "4.1.11"
flake8 = "6.0.0"
black = "23.3.0"
mypy = "1.3.0"
boto3-stubs = {version = "1.26.137", extras = ["essential"]}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
